welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:6: error: not found: value m
      m=n%10
      ^lastDigit:7: error: reassignment to val
      n=m
       ^