welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
  var un:Int = a
  var deux:Int = b
  def dernierChiffre(n:Int):Int={
    while (n >9){
      m=n%10
      n=m
    }
    return n
  }
  dernierChiffre(a)==dernierChiffre(b)
}